Credentials GUI and view model implementation progress
- view model:
	* removed all boolean attributes to memorize special character preferences. they are now "condensed" int _specChar observable collection
	* init method now also contains assignment that ,ust not be canceled
	* AddCredentials method is implemented
	* CheckNewCredsData corrected: now it checks if GenPwd is true or NewPwd contains something instead of verifying NewPwd content only

- view:
	* Horizontal stack pan class for stack panel removed
	* isChecked binding for generate password check box added
	* x:Name of generate password check box changed in genPwdCheck
	* numeriUpDown value binding added
	* all toggle buttons are now inside an item control element

-style:
	* Horizontal stack pan class removed

--- a/KeyConcealment/KeyConcealment/Views/CredsView.axaml
+++ b/KeyConcealment/KeyConcealment/Views/CredsView.axaml
@@ -49,12 +49,12 @@
 
                               <CheckBox
                                     IsChecked="{Binding GenPwd}"
-                                    x:Name="genPwdButton">
+                                    x:Name="genPwdCheck">
                                     Generate Password
                               </CheckBox>
 
                               <StackPanel
-                                    IsVisible="{Binding ElementName=genPwdButton, Path=IsChecked}">
+                                    IsVisible="{Binding ElementName=genPwdCheck, Path=IsChecked}">
 
 
                                     <TextBlock
@@ -84,50 +84,6 @@
                                                 </DataTemplate>
                                           </ItemsControl.ItemTemplate>
                                     </ItemsControl>
-                                    <!--
-                                          <ListBox
-                                                ItemsSource="{Binding SpecChars}">
-                                                <ListBox.ItemTemplate>
-                                                      <DataTemplate
-                                                            DataType="{x:Type models:SpecChar}">
-                                                            <ToggleButton
-                                                                  IsChecked="{Binding Chosen}">
-                                                                  <TextBlock
-                                                                        Text="{Binding SpecialCharacter}" />
-                                                            </ToggleButton>
-                                                      </DataTemplate>
-                                                </ListBox.ItemTemplate>
-                                          </ListBox>
-                                          <ToggleButton IsChecked="{Binding CharMinus}">
-                                                -
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharPlus}">
-                                                +
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharUnderscore}">
-                                                _
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharAmpersand}">
-                                                &amp;
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharAt}">
-                                                @
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharPercent}">
-                                                %
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharDollar}">
-                                                $
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharPound}">
-                                                £
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharHashtag}">
-                                                #
-                                          </ToggleButton>
-                                          <ToggleButton IsChecked="{Binding CharEsclamation}">
-                                                !
-                                          </ToggleButton>-->
 
                               </StackPanel>
 
@@ -135,7 +91,7 @@
                                     Classes="UserData Pwd"
                                     Watermark="Password"
                                     Text="{Binding NewPwd}"
-                                    IsVisible="{Binding ElementName=genPwdButton, Path=!IsChecked}">
+                                    IsVisible="{Binding ElementName=genPwdCheck, Path=!IsChecked}">
                               </TextBox>
 
 
